---
source: tests/test.rs
expression: diff
info:
  lhs:
    minimum: 1
    type: number
  rhs:
    exclusiveMaximum: 1
    type: number
input_file: tests/fixtures/range/minimum_to_exclusive_maximum.json
---
[
    Change {
        path: "",
        change: RangeRemove {
            removed: Minimum(
                1.0,
            ),
        },
    },
    Change {
        path: "",
        change: RangeAdd {
            added: ExclusiveMaximum(
                1.0,
            ),
        },
    },
]
